# libxxdk

./: .gitignore  Makefile  README.md  callbacks.go  callbacks.h  go.mod  go.sum  main.go
examples-c/: e2e_client.cpp
sharedcgo/: callbacks.go  callbacks.h  main.go  rpc.go
xxdk-rs/: Cargo.toml  README.md
xxdk-rs/dm-demo/: Cargo.toml
xxdk-rs/dm-demo/src/: lib.rs  main.rs
xxdk-rs/rpc-example/: Cargo.toml
xxdk-rs/rpc-example/src/: lib.rs  main.rs
xxdk-rs/xxdk/: Cargo.toml
xxdk-rs/xxdk-sys/: Cargo.toml  build.rs
xxdk-rs/xxdk-sys/src/: lib.rs
xxdk-rs/xxdk/src/: base.rs  lib.rs  rpc.rs  service.rs  util.rs
xxdk-rs/xxdk/src/base/: callbacks.rs  dm.rs  rpc.rs
xxdk-rs/xxdk/src/rpc/: extractor.rs  handler.rs  router.rs
xxdk-rs/xxdk/src/service/: v2.rs
xxdk.NET/: Program.cs  dm.sh  mainnet-ndf.json  xxdk.NET.csproj  xxdk.NET.sln  xxdk.Unsafe.cs  xxdk.cs
